// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders heading level with another size 1`] = `
<div>
  <div>
    <h1
      class="sc-bdVaJa fBcbFy"
    >
      Heading level 1
    </h1>
    <h3
      class="sc-bdVaJa eINuct"
    >
      Heading level 3
    </h3>
    <h3
      class="sc-bdVaJa fBcbFy"
    >
      Heading level 3 size 1
    </h3>
  </div>
</div>
`;

exports[`renders knockout heading with different class 1`] = `
<div>
  <div>
    <h1
      class="sc-bdVaJa fBcbFy"
    >
      Heading level 1
    </h1>
    <h1
      class="sc-bdVaJa eJcsoP"
    >
      Knockout Heading level 1
    </h1>
  </div>
</div>
`;
